Versuche zu Transportabschnitten und Orten

--- a/app/views/firmen/_form_modal.html.erb
+++ b/app/views/firmen/_form_modal.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@firma) do |f| %>
 
-  <div class="modal fade" id="firmaModal-<%= objekt.id if defined?(objekt) %>" tabindex="-1" role="dialog" aria-labelledby="stoffModalLabel" aria-hidden="true">
+  <div class="modal fade" id="firmaModal-<%= objekt.id if defined?(objekt) %>" tabindex="-1" role="dialog" aria-labelledby="firmaModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         
