--- a/app/views/abfragen/calendar.html.erb
+++ b/app/views/abfragen/calendar.html.erb
@@ -1,4 +1,34 @@
-<h1>Ausgewählte Transporte in Kalenderdarstellung</h1>
+<h1>Ausgewählte Transporte</h1>
+
+<div class="row">
+  <div class="col-sm-8">
+    <p><%= @dort %></p>
+    <p> Zeitraum: <%= @zeitraum %></p>
+    <p> Stoffe : <%= @stoffe ? @stoffe : "Alle" %> </p>
+    <p> Start-Anlagen : <%= @start_anlagen ? @start_anlagen : "Alle"  %> </p>
+    <p> Ziel-Anlagen : <%= @ziel_anlagen ? @ziel_anlagen : "Alle" %> </p>
+    <p> Verkehrsträger: <%= @verkehrstraeger %></p>
+  </div>
+  
+  <div class="col-sm-4">
+    <%= form_tag({action: :show}, multipart: true) do %>
+      <%= hidden_field_tag "year", @year %>
+      <%= hidden_field_tag "start_datum", params["start_datum"] %>
+      <%= hidden_field_tag "end_datum", params["end_datum"] %>
+      <%= hidden_field_tag "stoffe", params["stoffe"] %>
+      <%= hidden_field_tag "verkehrstraeger", params["verkehrstraeger"] %>
+      <%= hidden_field_tag "start_anlagen", params["start_anlagen"] %>
+      <%= hidden_field_tag "ziel_anlagen", params["ziel_anlagen"] %>
+      <%= hidden_field_tag "dort", params["dort"] %>
+      <div class="btn-group pull-right" role="group" aria-label="...">
+        <%= submit_tag "Tabelle", class: "btn btn-primary" %>
+        <button type="button" class="btn btn-primary active">Kalender</button>   
+      </div>
+      
+    <% end %>
+  </div>
+</div>
+
 
     <div class="panel panel-default">
       <div class="panel-heading">
