mengen fehlerbeseitigung, tests

--- a/app/views/transporte/_form.html.erb
+++ b/app/views/transporte/_form.html.erb
@@ -63,14 +63,16 @@
                 </div>
               </div>
             </div>
-          
-         
-          
-          
+
 
           <div class="form-group">
-            <%= f.label :menge %><br>
-            <%= f.text_field :menge, class:"form-control" %>
+            <%= f.label :menge_brutto, "Brutto-Menge (inklusive Behälter in Tonnen)" %><br>
+            <%= f.text_field :menge_brutto, class:"form-control" %>
+          </div>
+          
+          <div class="form-group">
+            <%= f.label :menge_netto, "Netto-Menge (ohne Behälter in Tonnen)" %><br>
+            <%= f.text_field :menge_netto, class:"form-control" %>
           </div>
          
           <div class="form-group">
