Ansätze zusammenlegen von Orten, #51

--- a/app/views/orte/show.html.erb
+++ b/app/views/orte/show.html.erb
@@ -60,6 +60,23 @@
         </div>
       </div>
     <% end %>
+    
+    <% unless @ort.beobachtungen.empty? %>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">Beobachtungen (nach Datum)</h3>
+        </div>
+        <div class="panel-body">
+          <ul>
+            <% @ort.beobachtungen.each do |beobachtung| %>
+              <li>
+                <%= link_to (l beobachtung.ankunft_zeit), beobachtung %>
+              </li>
+            <% end %>
+          </ul> 
+        </div>
+      </div>
+    <% end %>
   </div>
  
   <div class="col-sm-6">
@@ -73,6 +90,45 @@
       <%= @ort.lat %>
       <%= @ort.lon %>
     <% end %>
+</div>
+
+  <h2> Ähnliche Orte zum Zusammenführen</h2>
+
+<div class="row">
+  <div class="col-sm-6">
   
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Orte im Umkreis von 50km</h3>
+      </div>
+      <div class="panel-body">
+        <dl class="dl-horizontal">
+          <% @umkreis_orte.each do |u_ort| %>
+            <dt><%= link_to u_ort.name, u_ort %></dt>
+            <dd>Link Zu diesem Ort hinzufügen</dd>
+          <% end %>
+        </dl>   
+      </div>
+    </div>
+  </div>
+    
+  <div class="col-sm-6">
+  
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Orte mit ähnlichem Namen</h3>
+      </div>
+      <div class="panel-body">
+        <dl class="dl-horizontal">
+          <% @namens_orte.each do |u_ort| %>
+            <% unless u_ort.id == @ort.id %>
+              <dt><%= link_to u_ort.name, u_ort %></dt>
+              <dd>Link Zu diesem Ort hinzufügen</dd>
+            <% end %>
+          <% end %>
+        </dl>   
+      </div>
+    </div>
+  </div>
 
 </div>
