--- a/app/assets/stylesheets/abfragen.css.scss
+++ b/app/assets/stylesheets/abfragen.css.scss
@@ -8,7 +8,27 @@
 }
 
 .panel table.calendar {
-  margin: 0
+  margin: 0;
+  table-layout: fixed;
+  
+  th:first-child {
+    width: 7em;
+  }
+  
+  .calendar_transportabschnitt {
+    height: 19px;
+    width: auto;
+    background-color: red;
+    margin: 15%;
+  }
+  
+  .platzhalter {
+    height: 19px;
+    width: 19px;
+    background-color: none;
+    margin: 5px;
+  }
+
 }
 
 .calendar-title {
