--- a/app/assets/stylesheets/abfragen.css.scss
+++ b/app/assets/stylesheets/abfragen.css.scss
@@ -24,9 +24,9 @@
   
   .platzhalter {
     height: 19px;
-    width: 19px;
+    width: auto;
     background-color: none;
-    margin: 5px;
+    margin: 15%;
   }
 
 }
