--- a/app/views/abfragen/show.html.erb
+++ b/app/views/abfragen/show.html.erb
@@ -14,13 +14,7 @@
   <div class="col-sm-4">
     <%= form_tag({action: :calendar}, multipart: true) do %>
       <%= hidden_field_tag "year", @year %>
-      <%= hidden_field_tag "start_datum", params["start_datum"] %>
-      <%= hidden_field_tag "end_datum", params["end_datum"] %>
-      <%= hidden_field_tag "stoffe", params["stoffe"] %>
-      <%= hidden_field_tag "verkehrstraeger", params["verkehrstraeger"] %>
-      <%= hidden_field_tag "start_anlagen", params["start_anlagen"] %>
-      <%= hidden_field_tag "ziel_anlagen", params["ziel_anlagen"] %>
-      <%= hidden_field_tag "dort", params["dort"] %>
+      <%= render 'hidden_fields' %>
       <div class="btn-group pull-right" role="group" aria-label="...">
         <button type="button" class="btn btn-primary active">Tabelle</button> 
         <%= submit_tag "Kalender", class: "btn btn-primary" %>
