--- a/app/views/abfragen/calendar.html.erb
+++ b/app/views/abfragen/calendar.html.erb
@@ -13,13 +13,7 @@
   <div class="col-sm-4">
     <%= form_tag({action: :show}, multipart: true) do %>
       <%= hidden_field_tag "year", @year %>
-      <%= hidden_field_tag "start_datum", params["start_datum"] %>
-      <%= hidden_field_tag "end_datum", params["end_datum"] %>
-      <%= hidden_field_tag "stoffe", params["stoffe"] %>
-      <%= hidden_field_tag "verkehrstraeger", params["verkehrstraeger"] %>
-      <%= hidden_field_tag "start_anlagen", params["start_anlagen"] %>
-      <%= hidden_field_tag "ziel_anlagen", params["ziel_anlagen"] %>
-      <%= hidden_field_tag "dort", params["dort"] %>
+      <%= render 'hidden_fields' %>
       <div class="btn-group pull-right" role="group" aria-label="...">
         <%= submit_tag "Tabelle", class: "btn btn-primary" %>
         <button type="button" class="btn btn-primary active">Kalender</button>   
@@ -35,9 +29,7 @@
         <h1 class="panel-title calendar-title text-center">
           
           <%= form_tag({action: :calendar}, multipart: true, class: "calendar-form") do %>
-            <% @transporte.each do |trans| %>
-              <%= hidden_field_tag "transport_#{trans.id}", trans.id %>
-            <% end %>
+            <%= render 'hidden_fields' %>
             <%= hidden_field_tag "year", @year - 1 %> 
             <%= button_tag(type: 'submit', class: "calendar-button") do %>
               <small><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> <%="#{@year - 1}"%></small>
@@ -47,9 +39,7 @@
           <%= "#{@year}" %>
       
           <%= form_tag({action: :calendar}, multipart: true, class: "calendar-form") do %>
-            <% @transporte.each do |trans| %>
-              <%= hidden_field_tag "transport_#{trans.id}", trans.id %>
-            <% end %>
+            <%= render 'hidden_fields' %>
             <%= hidden_field_tag "year", @year + 1 %> 
             <%= button_tag(type: 'submit', class: "calendar-button") do %>
               <small><%="#{@year + 1}"%> <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></small>
