--- a/app/views/umschlaege/_show_umschlag.html.erb
+++ b/app/views/umschlaege/_show_umschlag.html.erb
@@ -5,13 +5,19 @@
   <% end %>
   
   <%= link_to "Details", umschlag %>
-  <% if logged_in? %>
-    | <%= link_to "Bearbeiten", edit_umschlag_path(umschlag) %> 
-    <% if umschlag.start_datum %>
+  <% if is_editor? %>
+    | <%= link_to "Bearbeiten", edit_umschlag_path(umschlag) %>
+    | <%= link_to 'Löschen', umschlag, method: :delete, data: { confirm: 'Willst du den Transportabschnitt wirklich löschen?' } %>
+    
+    <% if umschlag.start_datum || umschlag.ort %>
       | <%= link_to "Abschnitt davor anlegen", new_transportabschnitt_path(transport_id: umschlag.transport.id, umschlag_danach: umschlag.id) %>
     <% end %>
-    <% if umschlag.end_datum %>
+    <% if umschlag.end_datum || umschlag.ort %>
       | <%= link_to "Abschnitt danach anlegen", new_transportabschnitt_path(transport_id: umschlag.transport.id, umschlag_davor: umschlag.id) %>
     <% end %>
+    
+  <%= umschlag.ort.id %>
   <% end %>
+  
+  
 </div>
