--- a/app/views/transportabschnitte/_form.html.erb
+++ b/app/views/transportabschnitte/_form.html.erb
@@ -47,11 +47,13 @@
         <div class='input-group ort' id='ort-start'>
           <% anlagen_ort = @transport.start_anlage.ort if @transport %>
           <% if anlagen_ort %>
-            <%= hidden_field_tag :start_ort_ident, anlagen_ort.id %>
             <span class="btn btn-primary" onclick="setup_start_ort_wahl(<%= anlagen_ort.id %>,'<%= anlagen_ort.name %>')">Start-Anlage als Ort wählen</span>
+          <% end %> 
+          <% if @transportabschnitt.start_ort %>
+            <%= hidden_field_tag :start_ort_ident, @transportabschnitt.start_ort.id %>
           <% else %>
             <%= hidden_field_tag :start_ort_ident %>
-          <% end %>
+          <% end %>  
           <button class="btn btn-primary" data-toggle="modal" data-target="#ortModal-Start" type="button">Ort eingeben</button>
 
         </div>
@@ -77,10 +79,12 @@
           <% anlagen_ort = @transport.ziel_anlage.ort if @transport%>
           <% if anlagen_ort %>
             <span class="btn btn-primary" onclick="setup_ziel_ort_wahl(<%= anlagen_ort.id %>,'<%= anlagen_ort.name %>')">Ziel-Anlage als Ort wählen</span>
-            <%= hidden_field_tag :ziel_ort_ident, anlagen_ort.id %>
-          <% else %>
-            <%= hidden_field_tag :ziel_ort_ident %>
           <% end %>
+           <% if @transportabschnitt.end_ort %>
+            <%= hidden_field_tag :end_ort_ident, @transportabschnitt.end_ort.id %>
+          <% else %>
+            <%= hidden_field_tag :end_ort_ident %>
+          <% end %>  
           <button class="btn btn-primary" data-toggle="modal" data-target="#ortModal-Ziel" type="button">Ort eingeben</button>
         </div>
       </div>
