--- a/app/views/beobachtungen/_form.html.erb
+++ b/app/views/beobachtungen/_form.html.erb
@@ -41,8 +41,8 @@
           </div>
           <script type="text/javascript">
             //javascript dafeur mehrfach benutzbar, also ausgelagert in setup_datetimepicker.js
-            setup_datetimepicker('#datetimepicker-ankunft')
-            setup_datetimepicker('#datetimepicker-abfahrt')
+            setup_datetimepicker('#datetimepicker-ankunft');
+            setup_datetimepicker('#datetimepicker-abfahrt');
             // javascript, um Erklärungen unter Fragezeichen anzuzeigen
             $(function () {
                 $('.glyphicon-question-sign').tooltip();
