--- a/app/views/beobachtungen/index.html.erb
+++ b/app/views/beobachtungen/index.html.erb
@@ -42,7 +42,9 @@
             <td><%= beobachtung.ort %></td>
             <td><%= link_to 'Show', beobachtung %></td>
             <td><%= link_to 'Bearbeiten', edit_beobachtung_path(beobachtung) %></td>
-            <td><%= link_to 'Löschen', beobachtung, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= link_to beobachtung, method: :delete, data: { confirm: 'Willst du die Beobachtung wirklich löschen?' } do
+              render 'text_remove'
+            end %></td>
           </tr>
         <% end %>
       </tbody>
