--- a/app/views/stoffe/index.html.erb
+++ b/app/views/stoffe/index.html.erb
@@ -22,7 +22,9 @@
         <td><%= stoff.un_nummer %></td>
         <td><%= stoff.gefahr_nummer %></td>
         <td><%= link_to 'Bearbeiten', edit_stoff_path(stoff) %></td>
-        <td><%= link_to 'Löschen', stoff, method: :delete, data: { confirm: 'Willst du den Stoff wirklich löschen?' } %></td>
+        <td><%= link_to stoff, method: :delete, data: { confirm: 'Willst du den Stoff wirklich löschen?' } do
+          render 'text_remove'
+        end %></td>
       </tr>
     <% end %>
   </tbody>
