--- a/app/views/orte/index.html.erb
+++ b/app/views/orte/index.html.erb
@@ -47,10 +47,16 @@
           <tr>
             <td><%= link_to ort.name, ort %></td>
             <td><%= ort.plz %></td>
-            <td><%= link_to 'Bearbeiten', edit_ort_path(ort) %></td>
-            <td><%= link_to ort, method: :delete, data: { confirm: 'Willst du den Ort wirklich löschen?' } do
-              render 'text_remove'
-            end%></td>
+            <td>
+              <%= link_to edit_ort_path(ort) do
+                render 'text_edit'
+              end %>
+            </td>
+            <td>
+              <%= link_to ort, method: :delete, data: { confirm: 'Willst du den Ort wirklich löschen?' } do
+                render 'text_remove'
+              end%>
+            </td>
           </tr>
         <% end %>
       </tbody>
